# dales

./: .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: compile.yml  precision.yml  test-compilation.yml  test.yml
cases/botany-dephy/: convert_input.py  init.001.nc  namoptions.001
cases/comble/: README.md
cases/gabls1/: _README.001  dales_gabls1.py  namoptions.001  namoptions_SMAGORINKSY.001  plot_profiles.py
cases/sullivan2011/: _README.001  dales_sullivan2011.py  lscale.inp.001  (+4 more)
cmake/: dales_compile_options.cmake  dales_find_cuda.cmake
config/: cheops_2018.cmake  cheops_CMakeLists.txt  modversion.f90
rundales/: runDALES_bind4proc_local.sh  runDALES_bind4proc_yamo.sh  runDALES_cheops  runDALES_debug_n8nod2_cheops2023_gcc_openmpi.sh  runDALES_juwels  runDALES_levante  runDALES_local_mosaic.sh  runDALES_n128nod4bind_juwels2024_gcc_parastation.sh  runDALES_n16nod1_juwels_gcc_parastation_2019_08.sh  runDALES_n16nod2_juwels2022fix2023_gcc_parastation.sh  runDALES_n16nod2_juwels2023_gcc_parastation.sh  runDALES_n32nod2_juwels2022_gcc_parastation.sh  runDALES_n32nod2_juwels2022_gcc_parastation_mosaic.sh  runDALES_n32nod2_juwels2022fix2023_gcc_parastation.sh  runDALES_n32nod2_juwels2023_gcc_parastation.sh  runDALES_n32nod2_juwels2024_gcc_parastation.sh  runDALES_n32nod2_juwels_gcc_parastation_2019_08.sh  runDALES_n32nod2_juwels_gcc_parastation_2019_08_mosaic.sh  runDALES_n32nod2_levante2023_gcc_openmpi.sh  runDALES_n64nod4_juwels_gcc_parastation.sh  runDALES_n8nod1_cheops2023_gcc_openmpi.sh  runDALES_parallel_16_cheops_master.sh
src/: CMakeLists.txt  advec_2nd.f90  advec_hybrid.f90  advec_kappa.f90  advec_upw.f90  bulkmicro_kk.f90  bulkmicro_sb.f90  depos_lu.inc  go.f90  le_drydepos_gas.f90  modAGScross.f90  modadvection.f90  modboundary.f90  modbudget.f90  modbulkmicro.f90  modbulkmicro3.f90  modbulkmicro3_column.f90  modbulkmicrostat.f90  modbulkmicrostat3.f90  modcanopy.f90  modcape.f90  modchecksim.f90  modchem.f90  modcloudfield.f90  modcrosssection.f90  modcufft.f90  moddatetime.f90  moddepcrosssection.f90  moddrydeposition.f90  modemisdata.f90  modemission.f90  modfftw.f90  modfielddump.f90  modfields.f90  modforces.f90  modgenstat.f90  modglobal.f90  modgpu.f90  modgpumpiinterface.f90  modheterostats.f90  (+55 more)
(+7 files in other folders)
